Fixed widths to not misalign when containing errors. Fixed floating for date-cells with errors.

--- a/app/assets/stylesheets/goals.css.scss
+++ b/app/assets/stylesheets/goals.css.scss
@@ -37,11 +37,11 @@
 }
 
 .goal-quantity-cell {
-  width: 100px;
+  width: 90px;
 }
 
 .goal-quantity-field {
-  width: 98px;
+  width: 85px;
 }
 
 .unit-cell {
@@ -49,7 +49,7 @@
 }
 
 .unit-field {
-  width: 68px;
+  width: 65px;
 }
 
 .frequency-cell {
@@ -57,7 +57,7 @@
 }
 
 .frequency-field {
-  width: 50px;
+  width: 45px;
 }
 
 .frequency-unit-cell {
@@ -71,6 +71,10 @@
 
 .date-cell {
   width: 123px;
+}
+
+td.date-cell .field_with_errors {
+  float: left;
 }
 
 .status-cell {
